[package]
name = "orion-chain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ecdsa = {version = "0.16.8", feature=["verifying","der","pem","alloc"]}
env_logger = "0.10.0"
hex = "0.4.3"
k256 = {version="0.13.1"}
log = {version="0.4.20"}
p256 = "0.13.2"
rand = {version = "0.8.5"}
sha256 = "1.4.0"
