[package]
name = "orion-chain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ecdsa = {version = "0.16.8", feature=["verifying","der","pem","alloc"]}
env_logger = "0.10.0"
hex = "0.4.3"
k256 = {version="0.13.1"}
log = {version="0.4.20"}
p256 = "0.13.2"
rand = {version = "0.8.5"}
sha256 = "1.4.0"
hyper = { version = "1.0.0-rc.3", features = ["full"] }
tokio = { version = "1", features = ["full"] }
pretty_env_logger = "0.4"
http-body-util = "0.1.0-rc.2"
bytes = "1"
url = "2.2"
http = "0.2"
futures-util = { version = "0.3", default-features = false, features = ["alloc"] }
pin-project-lite = "0.2.13"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3.3"

