[package]
name = "orion-chain"
version = "0.1.0"
edition = "2021"

[dependencies]

# Crypto
ecdsa = {version = "0.16.8", features=["verifying","der","pem","alloc","serde"]}
k256 = {version="0.13.1", features = ["serde"]}
p256 = "0.13.2"
sha256 = "1.4.0"
rand = {version = "0.8.5"}

# Loggin
env_logger = "0.10.0"
log = {version="0.4.20"}
pretty_env_logger = "0.4"

# Encoding
hex = "0.4.3"
bytes = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3.3"
serde_with = {version = "3.9.0", features=["base64"]}
serde_bytes = "0.11.15"

# Async
tokio = { version = "1", features = ["full"] }
futures-util = { version = "0.3", default-features = false, features = ["alloc"] }
pin-project-lite = "0.2.13"

# HTTP
http-body-util = "0.1.0-rc.2"
url = "2.2"
http = "0.2"
hyper = { version = "1.0.0-rc.3", features = ["full"] }
actix-web = "4.9.0"
actix-cors = "0.7.0"


